source/style/card.css
.main-container {
  background-color: rgb(124, 136, 224, 0.5);
  background-image: 
    linear-gradient(240deg, rgba(68, 130, 172, 0.5) 15%, rgb(2, 29, 36) 100%),
    repeating-linear-gradient(
      45deg,
      rgba(255, 255, 255, 0.1) 0,
      rgba(255, 255, 255, 0.1) 1px,
      transparent 1px,
      transparent 50px
    );
  border-radius: 1%;
  border: 1px solid rgb(2, 29, 36);
  margin-bottom: 2%;
  overflow: hidden;
  box-shadow: 
    5px 5px 10px rgba(0, 0, 0, 0.3),    /* Darker shadow for depth */
    10px 10px 20px rgba(0, 0, 0, 0.2);  /* Lighter, larger shadow for further depth */
  padding: 10px;
  width: 100%;
  margin: 0 auto;
  margin-bottom: 2%;
}

.header-container {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  margin-bottom: 1%;
}

.completed {
  background-color:rgba(0, 0, 0, 0);
  color: white;
  text-shadow: 2px 2px 4px #000000;
  padding: 5px;
  border-radius: 5px;
  font-size: 1.25rem;
  font-family: Inter, sans-serif;
  font-weight: 500;
}

.exercise-type {
  margin: 0 10px;
  padding: 5px;
  font-size: 1rem; 
  font-weight: normal;
}

.exercise-header {
  font-size: 1.35rem;
  color: white;
  text-shadow: 2px 2px 4px #000000;
  margin: 0 auto;
  font-weight: bold;
  font-family: Inter, sans-serif;
  text-align: center;
}

.date-input { 
  padding: 8px;
  border: 0px solid #ccc;
  border-radius: 5px;
  box-sizing: border-box;
  font-family: Inter, sans-serif;
  background-color:rgba(0, 0, 0, 0);
  font-size: medium;
  cursor: pointer;
  width: 27%;
  color: white;
  text-shadow: 2px 2px 4px #000000;
  font-weight: 500;
}

.exercise-selection {
  padding: 8px;
  border: 0px solid #ccc;
  border-radius: 5px;
  box-sizing: border-box;
  font-family: Inter, sans-serif;
  font-size: medium;
  cursor: pointer;
  width: 35%;
  color: rgb(2, 29, 36);
  font-weight: 500;
}

.expand-button {
  cursor: pointer;
}

.content-container {
  display: flex;
  flex-direction: row;
  flex: 1;
  margin-bottom: 1%;
  padding-top: 30px;
}

.stats-container {
  display: flex;
  flex-direction: column;
  flex: 1;
}

.input-label {
  color: white;
  text-shadow: 2px 2px 4px #000000;
  margin-bottom: 1%;
  font-family: Inter, sans-serif;
  font-size: 18px;
  font-weight: 500;
}

.input-field {
  padding: 8px;
  margin-bottom: 10px;
  border: 3px solid white;
  color: rgb(2, 29, 36);
  border-radius: 5px;
  box-sizing: border-box;
  width: 90%;
  font-family: Inter, sans-serif;
  font-size: 16px;
}

.notes {
  resize: vertical;
  padding: 8px;
  margin-left: 10px;
  border: 3px solid white;
  border-radius: 5px;
  box-sizing: border-box;
  width: 100%;
  flex: 1;
  font-size: 16px;
  font-family: Inter, sans-serif;
  color: rgb(2, 29, 36);
}

.footer-container {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.right-buttons {
  display: flex;
}

#delete-button, #discard-button, #save-button {
  background-color: #ff0000;
  color: white;
  border: none;
  border-radius: 5px;
  padding: 8px 16px;
  margin: 5px;
  cursor: pointer;
}

